[package]
edition = "2021"
name = "watercontroller"
resolver = "2"
rust-version = "1.77"
version = "0.1.0"

[[bin]]
name = "watercontroller"
path = "./src/bin/main.rs"

[dependencies]
esp-idf-svc = { version = "0.51", features = ["alloc"] }
log = "0.4"
anyhow = "1"

[build-dependencies]
embuild = "0.33"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
