[package]
edition = "2021"
name = "watercontroller"
resolver = "2"
rust-version = "1.77"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "watercontroller"
path = "./src/bin/main.rs"

[features]
default = ["ethernet", "display"]
ethernet = []
display = ["dep:embedded-graphics"]
radar = []

[dependencies]
esp-idf-svc = { version = "0.51", features = ["alloc"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
anyhow = "1"
embedded-graphics = { version = "0.8", optional = true }

[build-dependencies]
embuild = "0.33"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = true
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
